--- a/Crowdfunding/mywebsite/views/donate.ejs
+++ b/Crowdfunding/mywebsite/views/donate.ejs
@@ -19,11 +19,10 @@
             <form action="/donate" method="post" name="Login_Form" class="form-signin">
                 <h3 class="form-signin-heading">Donation</h3>
 
-                <input type="text" class="form-control" name="id" placeholder="id" required="" autofocus="" />
                 <input type="text" class="form-control" name="campaigname" placeholder="campaigname" required=""/>
                 <input type="text" class="form-control" name="donationAmount" placeholder="donationAmount" required="" autofocus="" />
              
-                <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">Login</button>
+                <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">Donate</button>
             </form>
         </div>
     </div>
