--- a/Crowdfunding/mywebsite/views/index.ejs
+++ b/Crowdfunding/mywebsite/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Login Example</title>
+    <title>Crowdfunding</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,12 +17,13 @@
     <div class="container">
         <div class="wrapper">
             <form action="/login" method="post" name="Login_Form" class="form-signin">
-                <h3 class="form-signin-heading">Welcome! Please Sign In</h3>
+                <h3 class="form-signin-heading">Welcome to Crowdfunding! Please Sign In</h3>
 
                 <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
                 <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
 
                 <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">Login</button>
+                <p><a href="/users" class="btn btn-lg btn-primary btn-block" role="button">Register</a></p>
             </form>
         </div>
     </div>
